2001-02-21  Christopher Abbey  <cabbey@bresnanlink.net>

	* src/option.cpp (Option):
	Reset the encoding field to NULL
	in the case where the -encoding
	option is not valid.

2001-02-20  Eric Blake  <ebb9@email.byu.edu>

	* src/stream.cpp (Stream, ~Stream):
	Fix typos that break the build on
	systems without iconv or icu.

2001-02-19  Mo DeJong  <mdejong@redhat.com>

	* src/jikes.cpp (main): Only print the
	-encoding option when compiled with
	iconv or icu support.
	* src/option.cpp (Option):
	Move iconv and icu code to Stream class.
	Use encoding field to store the name
	of the encoding in use. Remove converter
	field, use encoding instead. Call
	Stream::IsSupportedEncoding method to
	determine if a given encoding is valid.
	* src/option.h (Option): Remove
	iconv and icu headers and the
	converter field.
	* src/platform.cpp (U8S_command_format):
	Only print the -encoding option when
	compiled with iconv or icu support.
	* src/stream.cpp (Stream, ~Stream,
	IsSupportedEncoding, SetEncoding,
	DestroyEncoding, LexStream,
	ProcessInputAscii, ProcessInputUnicode):
	Extract new Stream class from LexStream.
	Stream will handle encoding issues.
	* src/stream.h (Stream): Add iconv
	and icu includes. Add Stream class,
	LexStream inherits from Stream.

2001-02-18  Andrew M. Inggs  <aminggs@yahoo.co.uk>

	* src/jikes.cpp (main): Update
	Jikes home page URL in help output.

2001-02-18  Mo DeJong  <mdejong@redhat.com>

	* src/platform.cpp (LongToDecString):
	Add cast to ?: operator to make
	the gcc shipped with Red Hat 7 happy.

2001-02-18  Mo DeJong  <mdejong@redhat.com>

	* src/body.cpp (ProcessSuperCall): Fix
	assert caused by cast expression that
	was attempting to cast a primitive
	type argument in a super invocation
 	to the synthetic argument type.
	Jikes passes a synthetic class
	type as the first argument to a
	synthetic constructor. It was
	failing to take that into account
	when checking the argument types.
	* src/bytecode.cpp (EmitCast):