@@ -1,3 +1,9 @@
+2001-02-24  Mo DeJong  <mdejong@redhat.com>
+
+	* src/option.cpp:
+	* src/option.h:
+	Revert @file patch applied on 2001-02-17.
+
 2001-02-21  Christopher Abbey  <cabbey@bresnanlink.net>
 
 	* src/option.cpp (Option):
